--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "dependencies": {
         "@prisma/client": "^4.1.1",
         "@tailwindcss/forms": "^0.5.2",
+        "iron-session": "^6.1.3",
         "next": "12.2.3",
+        "nodemailer": "^6.7.7",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "react-hook-form": "^7.34.0"
+        "react-hook-form": "^7.34.0",
+        "twilio": "^3.80.0"
     },
     "devDependencies": {
         "@types/node": "18.6.2",
